tests/scripts/errors/runtime/eval_runtime_error.cdo
eval("VAR x = 1 + TRUE; print(x);");
